<package>
  <name>omip_msgs</name>
  <version>1.0.0</version>
  <description>
    Messages for OMIP - Online Multimodal Interactive Perception
  </description>

  <license>MIT</license>
  <author>Roberto Martín-Martín</author>
  <maintainer email="roberto.martinmartin@tu-berlin.de">Roberto Martín-Martín</maintainer>
  <url>http://wiki.ros.org/omip</url>  

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend> 
  <build_depend>pcl</build_depend> 
  <build_depend>pcl_ros</build_depend> 
  <build_depend>message_generation</build_depend> 
  <build_depend>pcl_conversions</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend> 
  <run_depend>pcl</run_depend> 
  <run_depend>pcl_ros</run_depend> 
  <run_depend>message_runtime</run_depend> 

</package>
